@@ -28,6 +28,8 @@ BUG FIXES:
 +Fix condition where window could be placed at (0, 0) on OSX which causes the
  frame to be placed behind the menubar.
 +Fix improper detection of when to auto-unindent in Python files.
++Fix Python auto-indent from incorrectly inserting space when the cursor is
+in the indentation space of a line.
 
 #-----------------------------------------------------------------------------#
 
